--- a/css/register.style.css
+++ b/css/register.style.css
@@ -48,7 +48,7 @@ body{
     line-height: 60px;
     margin: 0 auto;
     border: none;
-    border-bottom: 1px solid #666;
+    border-bottom: 1px solid #A9A9A9;
     outline-style: none;
     font-size: 20px;
 }
